src/rules/flake8_builtins/snapshots/ruff__rules__flake8_builtins__tests__A002_A002.py_builtins_ignorelist.snap
---
source: src/rules/flake8_builtins/mod.rs
expression: diagnostics
---
- kind:
    BuiltinArgumentShadowing: str
  location:
    row: 1
    column: 10
  end_location:
    row: 1
    column: 13
  fix: ~
  parent: ~
- kind:
    BuiltinArgumentShadowing: type
  location:
    row: 1
    column: 18
  end_location:
    row: 1
    column: 22
  fix: ~
  parent: ~
- kind:
    BuiltinArgumentShadowing: complex
  location:
    row: 1
    column: 25
  end_location:
    row: 1
    column: 32
  fix: ~
  parent: ~
- kind:
    BuiltinArgumentShadowing: Exception
  location:
    row: 1
    column: 34
  end_location:
    row: 1
    column: 43
  fix: ~
  parent: ~
- kind:
    BuiltinArgumentShadowing: getattr
  location:
    row: 1
    column: 47
  end_location:
    row: 1
    column: 54
  fix: ~
  parent: ~
- kind:
    BuiltinArgumentShadowing: bytes
  location:
    row: 5
    column: 16
  end_location:
    row: 5
    column: 21
  fix: ~
  parent: ~
- kind:
    BuiltinArgumentShadowing: float
  location:
    row: 11
    column: 15
  end_location:
    row: 11
    column: 20
  fix: ~
  parent: ~

